# LeSTA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
config/terrain_features/: params.yaml
height_mapping/height_mapping_core/: CMakeLists.txt  package.xml
height_mapping/height_mapping_core/include/height_mapping_core/: height_mapping_core.h  helper_functions.h
height_mapping/height_mapping_core/include/height_mapping_core/height_correctors/: HeightMapRaycaster.h
height_mapping/height_mapping_core/include/height_mapping_core/height_estimators/: HeightEstimatorBase.h  KalmanEstimator.h  MovingAverageEstimator.h  StatMeanEstimator.h
height_mapping/height_mapping_core/include/height_mapping_core/height_filters/: FastHeightFilter.h
height_mapping/height_mapping_core/include/height_mapping_core/height_map/: HeightMap.h  cloud_types.h  layer_definitions.h
height_mapping/height_mapping_core/src/: FastHeightFilter.cpp  HeightMap.cpp  KalmanEstimator.cpp  MovingAverageEstimator.cpp  StatMeanEstimator.cpp
include/feature_extraction/: FeatureMap.h
include/label_generation/: LabelGeneration.h
include/ros_utils/: TransformHandler.h  transform.h
include/terrain_mapping/: DescriptorMap.h  ElevationMap.h  ElevationMapRosConverter.h  GlobalTerrainMapping.h  LocalTerrainMapping.h  TerrainMapping.h
include/traversability_mapping/: TraversabilityMap.h  TraversabilityMapping.h
include/traversability_prediction/: TraversabilityMap.h
launch/: global_terrain_mapping.launch  local_terrain_mapping.launch  prediction.launch  run.launch  terrain_mapping.launch  traversability_mapping.launch
lesta_estimation_ros/launch/: prediction.launch
lesta_ros/: .clang-format  CMakeLists.txt  package.xml
lesta_ros/config/: label_generation_node.yaml  trav_mapping_node.yaml  trav_prediction_node.yaml
lesta_ros/config/include/: feature_extraction_params.yaml  feature_visualization.yaml
lesta_ros/include/common/ros/: FrameID.h  PointCloudOps.h  TransformOps.h  common.h
lesta_ros/include/lesta/core/: FeatureExtractor.h  GlobalMapper.h  HeightMapper.h  LabelGenerator.h  TraversabilityEstimator.h  TraversabilityMapper.h  TraversabilityNetwork.h  core.h
lesta_ros/include/lesta/ros/: config.h  label_generation_node.h  trav_mapping_node.h  trav_prediction_node.h
lesta_ros/include/lesta/types/: label_point.h  layer_definitions.h  traversability.h
lesta_ros/launch/: label_generation.launch  traversability_mapping.launch  traversability_prediction.launch
lesta_ros/launch/include/: label_generation.rviz  traversability_mapping.rviz  traversability_prediction.rviz
lesta_ros/src/core/: FeatureExtractor.cpp  GlobalMapper.cpp  HeightMapper.cpp  LabelGenerator.cpp  TraversabilityEstimator.cpp  TraversabilityMapper.cpp  TraversabilityNetwork.cpp
lesta_ros/src/ros/: label_generation_node.cpp  trav_mapping_node.cpp  trav_prediction_node.cpp
lesta_ros/srv/: save_training_data.srv
lesta_training/: setup.py  train.py
lesta_training/checkpoints/: mlp_classifier.pth  mlp_classifier_orig.pth
lesta_training/configs/: example_config.yaml
lesta_training/tools/: data_analysis.ipynb  train.py
pylesta/: README.md  setup.py
pylesta/configs/: lesta.yaml
pylesta/lesta/api/: dataset.py  (+5 more)
pylesta/tools/: test.py  train.py
rviz/: global_terrain_mapping.rviz
self_supervised_learning/: setup.py
self_supervised_learning/checkpoints/: mlp_classifier.pth  mlp_classifier_new.pth
self_supervised_learning/config/: training_params.yaml
self_supervised_learning/tools/: preprocessing.ipynb  preprocessing.py  train.py  train_model.py
src/: global_terrain_mapping_node.cpp  local_terrain_mapping_node.cpp  terrain_mapping_node.cpp  traversability_mapping_node.cpp
traversability_estimation/: CMakeLists.txt  package.xml
traversability_estimation/config/: params.yaml
traversability_estimation/config/feature_extraction/: params.yaml  visualization.yaml
traversability_estimation/config/label_generation/: params.yaml  visualization.yaml
traversability_estimation/config/traversability/: training_params.yaml
traversability_estimation/config/traversability_prediction/: params.yaml
traversability_estimation/data/: labeled_data.csv
traversability_estimation/include/feature_extraction/: FeatureExtraction.h  FeatureMap.h
traversability_estimation/include/label_generation/: LabelGeneration.h  TraversabilityInfo.h
traversability_estimation/include/traversability_prediction/: TraversabilityPrediction.h
traversability_estimation/launch/: feature_extraction.launch  label_generation.launch  prediction.launch
traversability_estimation/launch/include/: traversability_prediction.launch.xml
traversability_estimation/src/feature_extraction/: FeatureMap.cpp
traversability_estimation/src/label_generation/: LabelGeneration.cpp  label_generation_node.cpp
traversability_estimation/src/traversability_prediction/: TraversabilityMap.cpp  TraversabilityPrediction.cpp  traversability_prediction_node.cpp
traversability_learning/: CMakeLists.txt
traversability_learning/config/terrain_features/: params.yaml
traversability_learning/config/traversability/: feature_extraction copy.yaml  params.yaml  visualization.yaml
traversability_learning/include/feature_extraction/: FeatureExtraction.h  FeatureMap.h
traversability_learning/include/label_generation/: LabelGeneration.h  Labeler.h  Traversability.h
traversability_learning/include/ros_utils/: pointcloud.h
traversability_learning/include/traversability_prediction/: TraversabilityMap.h  TraversabilityPrediction.h
traversability_learning/launch/: feature_extraction.launch  label_generation.launch  prediction.launch
traversability_learning/launch/config/: params.yaml
traversability_learning/src/feature_extraction/: FeatureExtraction.cpp  FeatureMap.cpp  feature_extraction_node.cpp
traversability_learning/src/label_generation/: LabelGeneration.cpp  Labeler.cpp  label_generation_node.cpp
traversability_learning/src/traversability_prediction/: TraversabilityPrediction.cpp  traversability_prediction_node.cpp
(+61 files in other folders)
