<?xml version="1.0"?>
<package format="2">
  <name>traversability_mapping</name>
  <version>0.0.0</version>
  <description>The traversability_mapping package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>isr_ros_utils</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>ddynamic_reconfigure</depend>

  <export>
  </export>
</package>