<?xml version="1.0"?>
<package format="2">
  <name>traversability_mapping</name>
  <version>0.0.0</version>
  <description>The traversability_mapping package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- ROS -->
  <depend>roscpp</depend>
  <depend>ros_node_utils</depend>
  
  <!-- ROS transform -->
  <depend>tf2_ros</depend>
  <depend>ros_transform_utils</depend>

  <!-- PCL ROS -->
  <depend>pcl_conversions</depend>
  <depend>ros_pcl_utils</depend>

  <!-- Grid Map Library -->
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>

  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>