<?xml version="1.0"?>
<package format="2">
  <name>lesta</name>
  <version>0.0.0</version>
  <description>Learning self-supervised traversability with navigation experience of mobile robots</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>height_mapping_core</depend>
  <depend>grid_map_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  
  <export>
  </export>
</package>