<?xml version="1.0"?>
<package format="2">
  <name>self_supervised_traversability</name>
  <version>0.0.0</version>
  <description>The self_supervised_traversability package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>height_map_core</depend>
  <depend>height_map_msgs</depend>

  <export>
  </export>
</package>