<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_core</name>
  <version>0.0.0</version>
  <description>The height_mapping_core package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>

  <export>
  </export>
</package>